--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ url('https://laurent-brisson.github.io/img/headers/community.jpg');
 
       
       <div class="portrait" style="background-image: url('https://laurent-brisson.github.io/img/portrait.jpg');"></div>
-      <meta itemprop="image" content="https://laurent-brisson.github.io/img/portrait.jpg">
+      <meta itemprop="image" content="https://laurent-brisson.github.io//img/portrait.jpg">
       
 
       <div class="portrait-title">
