--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ url('https://www.laurent-brisson.fr/img/headers/community.jpg');
     <div id="profile">
 
       
-      <div class="portrait" style="background-image: url('https://www.laurent-brisson.frimg/portrait.jpg');"></div>
+      <div class="portrait" style="background-image: url('https://www.laurent-brisson.fr/img/portrait.jpg');"></div>
       <meta itemprop="image" content="https://www.laurent-brisson.fr/img/portrait.jpg">
       
 
