--- a/index.html
+++ b/index.html
@@ -765,6 +765,8 @@ DECIDE Team, Lab-STICC - CNRS UMR 6285 <br/>
 
 
 
+  
+
 
 
 
@@ -817,7 +819,7 @@ DECIDE Team, Lab-STICC - CNRS UMR 6285 <br/>
   </span>
   (2020).
   <a href="/publication/2020-3d-radial-layout-centrality-visualization/">3D radial layout for centrality visualization in graphs </a>.
-  In <em>Salento AVR 2020</em>, 7th International Conference on Augmented Reality, Virtual Reality and Computer Graphics.
+  In <em>Salento AVR 2020</em>, 7th International Conference on Augmented Reality, Virtual Reality and Computer Graphics, Lecce, Italy.
   
   <p>
 
@@ -856,6 +858,14 @@ DECIDE Team, Lab-STICC - CNRS UMR 6285 <br/>
 
 
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://hal.archives-ouvertes.fr/hal-02880033" target="_blank" rel="noopener">
+  Source Document
+</a>
 
 
 
@@ -959,12 +969,12 @@ DECIDE Team, Lab-STICC - CNRS UMR 6285 <br/>
 
 
 
-  <span>Piriziwè Kobina</span>, <span><a href="/authors/laurent-brisson/">Laurent Brisson</a></span>, <span><a href="/authors/thierry-duval/">Thierry Duval</a></span>
+  <span>Raphaël Charbey</span>, <span><a href="/authors/laurent-brisson/">Laurent Brisson</a></span>, <span>Cécile Bothorel</span>, <span><a href="/authors/philippe-ruffieux/">Philippe Ruffieux</a></span>, <span><a href="/authors/serge-garlatti/">Serge Garlatti</a></span>, <span><a href="/authors/jean-marie-gilliot/">Jean-Marie Gilliot</a></span>, <span>Antoine Mallégol</span>
 
   </span>
-  (2020).
-  <a href="/publication/2020-layout-radial-3d-visusalition-centralite-graphes/">Layout radial 3D pour la visualisation de la centralité dans les graphes </a>.
-  In <em>Atelier EGC-VIF 2020</em>, Conférence Extraction et Gestion des connaissances , Bruxelles, Belgique.
+  (2019).
+  <a href="/publication/2019-roles-in-social-interactions/">Roles in social interactions: graphlets in temporal networks applied to learning analytics </a>.
+  In <em>Complex Networks 2019, The 8th International Conference on Complex Networks and their Applications</em>, Lisbonne, Portugal.
   
   <p>
 
@@ -981,14 +991,14 @@ DECIDE Team, Lab-STICC - CNRS UMR 6285 <br/>
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/2020-layout-radial-3d-visusalition-centralite-graphes.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/2019-roles-in-social-interactions.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
-        data-filename="/publication/2020-layout-radial-3d-visusalition-centralite-graphes/cite.bib">
+        data-filename="/publication/2019-roles-in-social-interactions/cite.bib">
   Cite
 </button>
 
@@ -997,7 +1007,7 @@ DECIDE Team, Lab-STICC - CNRS UMR 6285 <br/>
 
 
   
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/immersive-analytics/">
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/learning-analytics/">
     Project
   </a>
   
@@ -1019,7 +1029,7 @@ DECIDE Team, Lab-STICC - CNRS UMR 6285 <br/>
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://hal.archives-ouvertes.fr/hal-02422512v1" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://hal.archives-ouvertes.fr/hal-02317823" target="_blank" rel="noopener">
   Source Document
 </a>
 
