--- a/publication_types/9/index.html
+++ b/publication_types/9/index.html
@@ -429,6 +429,13 @@
   </div>
   
   <div>
+    <h2><a href="/publication/2019-crowdfunding-platform-social-network/">Crowdfunding platform and inter-project social network: example of Ulule</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="/publication/2006-ontologie-fouille-donnees/">Ontologie et base de connaissances pour le pré-traitement et post-traitement en fouille de données</a></h2>
     <div class="article-style">
       
