--- a/research_activities/index.html
+++ b/research_activities/index.html
@@ -1234,7 +1234,7 @@
 <li>Subject: New 3D Collaborative Graph Visualizations for Exploration of Relations between Communities</li>
 <li>Director: Thierry Duval</li>
 <li>Supervisors: Thierry Duval - Laurent Brisson</li>
-<li>Funding: Britanny Region</li>
+<li>Funding: ARED</li>
 </ul>
 
 <p><strong>Michael Kamau Wahiu (october 2018 - ongoing)</strong></p>
