--- a/project/immersive-analytics/index.html
+++ b/project/immersive-analytics/index.html
@@ -810,7 +810,7 @@ We are particularly interested here in the development of graph visualization te
   </span>
   (2020).
   <a href="/publication/2020-3d-radial-layout-centrality-visualization/">3D radial layout for centrality visualization in graphs </a>.
-  In <em>Salento AVR 2020</em>, 7th International Conference on Augmented Reality, Virtual Reality and Computer Graphics.
+  In <em>Salento AVR 2020</em>, 7th International Conference on Augmented Reality, Virtual Reality and Computer Graphics, Lecce, Italy.
   
   <p>
 
@@ -849,6 +849,14 @@ We are particularly interested here in the development of graph visualization te
 
 
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://hal.archives-ouvertes.fr/hal-02880033" target="_blank" rel="noopener">
+  Source Document
+</a>
 
 
 
