--- a/publication/2020-3d-radial-layout-centrality-visualization/index.html
+++ b/publication/2020-3d-radial-layout-centrality-visualization/index.html
@@ -647,6 +647,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://hal.archives-ouvertes.fr/hal-02880033" target="_blank" rel="noopener">
+  Source Document
+</a>
+
 
 
 
@@ -692,7 +700,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">In <em>Salento AVR 2020</em>, 7th International Conference on Augmented Reality, Virtual Reality and Computer Graphics</div>
+          <div class="col-12 col-md-9">In <em>Salento AVR 2020</em>, 7th International Conference on Augmented Reality, Virtual Reality and Computer Graphics, Lecce, Italy</div>
         </div>
       </div>
       <div class="col-md-1"></div>
