--- a/index.html
+++ b/index.html
@@ -1698,7 +1698,7 @@ DECIDE Team, Lab-STICC - CNRS UMR 6285 <br/>
         
         <li>
           <i class="fa-li fas fa-map-marker fa-2x" aria-hidden="true"></i>
-          <span id="person-address">Office F01-114 - Technopôle Brest-Iroise, Brest Cedex 3, 29238, FRANCE</span>
+          <span id="person-address">Office F01-104A - Technopôle Brest-Iroise, Brest Cedex 3, 29238, FRANCE</span>
         </li>
       
 
@@ -1723,7 +1723,7 @@ DECIDE Team, Lab-STICC - CNRS UMR 6285 <br/>
       <input id="map-provider" value="2">
       <input id="map-lat" value="48.359269">
       <input id="map-lng" value="-4.5721417">
-      <input id="map-dir" value="Office F01-114 - Technopôle Brest-Iroise, Brest Cedex 3, 29238, FRANCE">
+      <input id="map-dir" value="Office F01-104A - Technopôle Brest-Iroise, Brest Cedex 3, 29238, FRANCE">
       <input id="map-zoom" value="15">
       <input id="map-api-key" value="">
     </div>
