--- a/project/complex-networks/index.html
+++ b/project/complex-networks/index.html
@@ -960,7 +960,7 @@ The approaches used are:
 </a>
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.5220/0010396901560162" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/https://dx.doi.org/10.1007/978-3-030-86436-1_7" target="_blank" rel="noopener">
   DOI
 </a>
 
