--- a/index.html
+++ b/index.html
@@ -1294,8 +1294,14 @@ DECIDE Team, Lab-STICC - CNRS UMR 6285 <br/>
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/2021-jeu-de-role-autonomie-motivation.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
