--- a/project/pedagogy/index.html
+++ b/project/pedagogy/index.html
@@ -834,8 +834,14 @@ Several topics are covered:
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/2021-jeu-de-role-autonomie-motivation.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
