--- a/publication/index.html
+++ b/publication/index.html
@@ -804,8 +804,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/2021-jeu-de-role-autonomie-motivation.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
