--- a/index.html
+++ b/index.html
@@ -479,8 +479,8 @@
 DECIDE Team, Lab-STICC - CNRS UMR 6285 <br/>
 <ul style='color:white;list-style-type:square;'>
   <li>Complex Networks Analysis</li>
-  <li>Temporal communities</li>
-  <li>Temporal patterns</li>
+  <li>Community Detection</li>
+  <li>Community Evolution in Dynamic Networks</li>
   <li>Immersive Analytics</li>
   <li>Learning Analytics</li>
 </ul></p>
